@@ -1,8 +1,8 @@
 Package: wordspace
 Type: Package
 Title: Distributional semantic models (DSM) in R
-Version: 0.1-9
-Date: 2014-04-18
+Version: 0.1-10
+Date: 2014-04-27
 Author: Stefan Evert [http://purl.org/stefan.evert]
 Maintainer: Stefan Evert <stefan.evert@linguistik.uni-erlangen.de>
 Depends: R (>= 3.0.0), Matrix
